Wed Dec 24 19:07:35 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/login.aspx.cs:
        
          . Added a header to the file.

Wed Dec 24 19:04:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/login.aspx:
        * utils/BMW/website/login.aspx.cs:

          . Cleaned a lot of the code.

Wed Dec 24 18:22:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/BMW.wxs:
        * install/BMW_installers.mpc:
        * utils/BMW/website/db/cutsbmw.empty.db:

          . Updated the BMW installer.

        * utils/BMW/website/rmi/unittest.asmx:

          . Changed the name of the web service page.

        * utils/BMW/website/rmi/Service.asmx:

          Removed this file.

Wed Dec 24 15:57:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/db/cutsbmw.db:
        * utils/BMW/website/login.aspx.cs:

          . Changed the name of the BMW database.

        * utils/BMW/website/db/cutsbmw.sqlite:

          Removed this file.

Tue Dec 23 19:30:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/Web.config:

          . Re-enabled form authentication for the entire website, and
            disabled form authentication for the /rmi directory. The
            username and password are sent as part of the SOAP header
            since using Cookies for web services is discouraged.

        * utils/BMW/website/admin/web.config:

          Removed this file.

Tue Dec 23 18:57:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/logging/server/Logging_Server_File.cpp:
        * cuts/utils/testing/Test_Configuration_File.cpp:

          . Fixed compilation errors on non-Windows systems.

Tue Dec 23 07:09:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Testing_Service_Manager.cpp:
