@@ -44,91 +44,96 @@
   <tr valign="top" style="padding-bottom:10px">
     <td class="menu" style="width:150px;padding-left:5px">
       <!-- begin main menu -->
-      <div class="title">Testing</div>
+      <asp:loginview id="main_menu_" runat="server">
+        <loggedintemplate>
+          <div class="title">Testing</div>
 
-      <div class="menu_item" onmouseover="hilite (this);" onmouseout="unhilite (this);">
-        <asp:image runat="server" id="menudot0" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
-        <asp:hyperlink runat="server" id="test_menu_item_"
-                       navigateurl="~/"
-                       text="Test Runs" /></div>
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="menudot4" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
-        <asp:hyperlink runat="server" id="Hyperlink1"
-                       navigateurl="~/baseline.aspx"
-                       text="Baseline Metrics" /></div>
+          <div class="menu_item" onmouseover="hilite (this);" onmouseout="unhilite (this);">
+            <asp:image runat="server" id="menudot0" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
+            <asp:hyperlink runat="server" id="test_menu_item_"
+                           navigateurl="~/"
+                           text="Test Runs" /></div>
+          <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+            <asp:image runat="server" id="menudot4" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
+            <asp:hyperlink runat="server" id="Hyperlink1"
+                           navigateurl="~/baseline.aspx"
+                           text="Baseline Metrics" /></div>
 
-      <br />
+            <br />
 
-      <div class="title">Configuration</div>
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="Image1" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
-        <asp:hyperlink runat="server" id="Test_Suites"
-                       navigateurl="~/unittest.aspx"
-                       text="Unit Tests" /></div>
+            <div class="title">Configuration</div>
+            <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+              <asp:image runat="server" id="Image1" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
+              <asp:hyperlink runat="server" id="Test_Suites"
+                             navigateurl="~/unittest.aspx"
+                             text="Unit Tests" /></div>
 
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="Image4" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
-        <asp:hyperlink runat="server" id="Hyperlink2"
-                       navigateurl="~/logformats.aspx"
-                       text="Log Formats" /></div>
+            <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+              <asp:image runat="server" id="Image4" imageurl="~/images/menudot.gif" imagealign="absMiddle" />
+              <asp:hyperlink runat="server" id="Hyperlink2"
+                             navigateurl="~/logformats.aspx"
+                             text="Log Formats" /></div>
 
-      <br />
+            <br />
 
-      <div class="title" style="margin-top:10px">System Details</div>
-      <div class="menu_item" onmouseover="hilite (this);" onmouseout="unhilite (this);">
-        <asp:image runat="server" id="menudot2" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
-        <asp:hyperlink runat="server" id="ci_menu_item_"
-                       navigateurl="~/components.aspx"
-                       text="Components" /></div>
+            <div class="title" style="margin-top:10px">System Details</div>
+            <div class="menu_item" onmouseover="hilite (this);" onmouseout="unhilite (this);">
+              <asp:image runat="server" id="menudot2" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
+              <asp:hyperlink runat="server" id="ci_menu_item_"
+                             navigateurl="~/components.aspx"
+                             text="Components" /></div>
 
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="menudot1" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
-        <asp:hyperlink runat="server" id="hosts_menu_item_"
-                       navigateurl="~/environment.aspx"
-                       text="Environment" /></div>
-      <div class="menu_item" onmouseover="hilite(this);" onmouseout="unhilite(this);">
-        <asp:image runat="server" id="menudot3" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
-        <asp:hyperlink runat="server" id="cp_menu_item_"
-                       navigateurl="~/paths.aspx"
-                       text="Execution Paths" /></div>
+            <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+              <asp:image runat="server" id="menudot1" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
+              <asp:hyperlink runat="server" id="hosts_menu_item_"
+                             navigateurl="~/environment.aspx"
+                             text="Environment" /></div>
+            <div class="menu_item" onmouseover="hilite(this);" onmouseout="unhilite(this);">
+              <asp:image runat="server" id="menudot3" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
+              <asp:hyperlink runat="server" id="cp_menu_item_"
+                             navigateurl="~/paths.aspx"
+                             text="Execution Paths" /></div>
 
-      <br />
-      
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="Image3" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
-        <asp:hyperlink runat="server" id="create_user_menu_item"
-                       navigateurl = "~/admin/createuser.aspx"
-                       text="Create New User" /></div>
-      
-      <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
-        <asp:image runat="server" id="Image2" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
-        <asp:LinkButton runat="server" id="logout"
-                       text="Logout" onclick="logout_Click" /></div>
-      
-      <br />
+            <br />
 
-      <asp:placeholder runat="server" id="help_item_" />
-    </td>
-    <td>
-      <!-- status/error message label for the page. -->
-      <asp:label id="message_" runat="server" />
+            <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+              <asp:image runat="server" id="Image3" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
+              <asp:hyperlink runat="server" id="create_user_menu_item"
+                             navigateurl = "~/admin/createuser.aspx"
+                             text="Create New User" /></div>
 
-      <asp:panel runat="server" id="console_" visible="true" scrollbars="none"
-                 style="display:none" width="750px" backcolor="lavender"
-                 cssclass="console console_text">
-        <asp:panel runat="server" id="console_text_" height="50px" scrollbars="auto"
-                   wrap="true" visible="true" cssclass="console_text" />
+            <div class="menu_item" onmouseover="hilite (this)" onmouseout="unhilite (this)">
+              <asp:image runat="server" id="Image2" imageurl="~/images/menudot.gif" imagealign="absmiddle" />
+              <asp:LinkButton runat="server" id="logout"
+                             text="Logout" onclick="logout_Click" /></div>
 
-        <hr />
+            <br />
 
-        <!-- controls for the console -->
-        <a href="javascript:console_clear ('<%= this.console_.ClientID %>');">Clear Messages</a>
-      </asp:panel>
+            <!-- placeholder for displaying the help button -->
+            <asp:placeholder runat="server" id="help_item_" />
 
-      <br />
+          </loggedintemplate>
+        </asp:loginview>
+      </td>
+      <td>
+        <!-- status/error message label for the page. -->
+        <asp:label id="message_" runat="server" />
 
-      <asp:contentplaceholder runat="server" id="MainContent" />
+        <asp:panel runat="server" id="console_" visible="true" scrollbars="none"
+                   style="display:none" width="750px" backcolor="lavender"
+                   cssclass="console console_text">
+          <asp:panel runat="server" id="console_text_" height="50px" scrollbars="auto"
+                     wrap="true" visible="true" cssclass="console_text" />
 
+          <hr />
+
+          <!-- controls for the console -->
+          <a href="javascript:console_clear ('<%= this.console_.ClientID %>');">Clear Messages</a>
+        </asp:panel>
+
+        <br />
+
+        <asp:contentplaceholder runat="server" id="MainContent" />
       <hr />
       <p>Copyright &copy; 2004 - <%= DateTime.Today.Year %>; All rights reserved.</p>
     </td>
